--- a/Client/package.json
+++ b/Client/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.20.0",
     "next": "^9.5.4",
     "react": "^16.13.1",
+    "react-color": "^2.18.1",
     "react-dom": "^16.13.1"
   },
   "devDependencies": {
