--- a/Client/package.json
+++ b/Client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@material-ui/core": "^4.11.0",
     "axios": "^0.20.0",
+    "date-fns": "^2.0.0-beta.5",
     "next": "^9.5.4",
     "react": "^16.13.1",
     "react-color": "^2.18.1",
