--- a/Client/package.json
+++ b/Client/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
+    "postbuild": "next-on-netlify",
     "start": "next start"
   },
   "keywords": [],
@@ -16,6 +17,7 @@
     "axios": "^0.20.0",
     "date-fns": "^2.0.0-beta.5",
     "next": "^9.5.4",
+    "next-on-netlify": "^2.5.1",
     "react": "^16.13.1",
     "react-color": "^2.18.1",
     "react-dom": "^16.13.1"
